fixing gap below nav

--- a/scss/sections/_intro.scss
+++ b/scss/sections/_intro.scss
@@ -8,6 +8,13 @@
     height: 100%;
 }
 
+.section_gap {
+    padding: 10rem 0 0 0;
+    width: 100%;
+    height: 100%;
+    }
+  
+
 .intros {
     .video-box{
         position: relative;
@@ -24,3 +31,4 @@
         }
     }
 }
+
